# summoner

./: .editorconfig  .gitignore  .headroom.yaml  .hlint.yaml  .stylish-haskell.yaml  .travis.yml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  appveyor.yml  cabal.project  default.nix  hs-init.hs  install  install.ps1  stack-8.2.2.yaml  stack-8.4.2.yaml  stack-8.4.3.yaml  stack-8.4.4.yaml  stack-8.6.1.yaml  stack-8.6.2.yaml  stack-8.6.4.yaml  stack-nightly.yaml  stack.yaml  summoner.cabal
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  release.yml
app/: Cli.hs  Main.hs  Tui.hs
headroom-templates/: haskell.mustache
nix/: fetchNixpkgs.nix  nixpkgs.nix  overrides.nix
src/: Prelude.hs  Summoner.hs
src/Summoner/: Ansi.hs  CLI.hs  Config.hs  Decision.hs  Default.hs  GhcVer.hs  License.hs  Process.hs  Project.hs  ProjectData.hs  Question.hs  Settings.hs  Source.hs  Template.hs  Text.hs  Tree.hs  Tui.hs  Validation.hs
src/Summoner/Question/: Data.hs
src/Summoner/Template/: Cabal.hs  Doc.hs  GitHub.hs  Haskell.hs  Stack.hs
src/Summoner/Tui/: CheckBox.hs  EditField.hs  Field.hs  Form.hs  Forms.hs  GroupBorder.hs  Kit.hs  Validation.hs  Widget.hs
summoner-cli/: CHANGELOG.md  cachix.sh  default.nix  summoner.cabal
summoner-cli/app/: Cli.hs
summoner-cli/examples/: cabalScript.hs  stackScript.hs  summoner-default.toml
summoner-cli/examples/cabal-full/: .travis.yml  CHANGELOG.md  LICENSE  README.md  appveyor.yml  cabal-full.cabal
summoner-cli/examples/cabal-full/.github/: dependabot.yml
summoner-cli/examples/cabal-full/.github/workflows/: ci.yml
summoner-cli/examples/cabal-full/app/: Main.hs
summoner-cli/examples/cabal-full/benchmark/: Main.hs
summoner-cli/examples/cabal-full/src/: CabalFull.hs
summoner-cli/examples/cabal-full/test/: Spec.hs
summoner-cli/examples/cabal-minimal/: CHANGELOG.md  README.md  cabal-minimal.cabal
summoner-cli/examples/cabal-minimal/app/: Main.hs
summoner-cli/examples/full-batteries/: .gitignore  .stylish-haskell.yaml  .travis.yml  CHANGELOG.md  LICENSE  README.md  appveyor.yml  extra.txt  full-batteries.cabal  stack-8.10.7.yaml  stack-8.8.4.yaml  stack-9.0.2.yaml  stack-9.10.3.yaml  stack-9.4.8.yaml  stack-9.8.4.yaml  stack.yaml
summoner-cli/examples/full-batteries/.github/workflows/: ci.yml
summoner-cli/examples/full-batteries/app/: Main.hs
summoner-cli/examples/full-batteries/benchmark/: Main.hs
summoner-cli/examples/full-batteries/src/: FullBatteries.hs
summoner-cli/examples/full-batteries/test/: Spec.hs
summoner-cli/examples/stack-full/: .travis.yml  CHANGELOG.md  README.md  appveyor.yml  stack-8.10.7.yaml  stack-8.8.3.yaml  stack-9.4.5.yaml  stack-9.6.6.yaml  stack-full.cabal  stack.yaml
summoner-cli/examples/stack-full/.github/workflows/: ci.yml
summoner-cli/examples/stack-full/app/: Main.hs
summoner-cli/examples/stack-full/benchmark/: Main.hs
summoner-cli/examples/stack-full/src/: StackFull.hs
summoner-cli/examples/stack-full/test/: Spec.hs
summoner-cli/golden/: Main.hs
summoner-cli/src/: Prelude.hs  Summoner.hs
summoner-cli/src/Summoner/: Ansi.hs  CLI.hs  Config.hs  CustomPrelude.hs  Decision.hs  Default.hs  GhcVer.hs  Golden.hs  License.hs  Mode.hs  Process.hs  Project.hs  Question.hs  Settings.hs  Shell.hs  Source.hs  Template.hs  Text.hs  Tree.hs
summoner-cli/src/Summoner/Template/: Cabal.hs  Doc.hs  GitHub.hs  Haskell.hs  Mempty.hs  Nix.hs  Script.hs  Stack.hs
summoner-cli/test/: Prelude.hs  Spec.hs
summoner-cli/test/Test/: CustomPrelude.hs  DecisionSpec.hs  Golden.hs  Script.hs  Show.hs  TomlSpec.hs
summoner-cli/test/golden/: summoner-default.toml
summoner-cli/test/golden/fullProject/: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  appveyor.yml  default.nix  fullProject.cabal  release.nix  stack-8.0.2.yaml  stack-8.2.2.yaml  stack-8.4.4.yaml  stack-8.6.5.yaml  stack.yaml
summoner-cli/test/golden/fullProject/.github/workflows/: ci.yml
summoner-cli/test/golden/fullProject/benchmark/: Main.hs
summoner-cli/test/golden/fullProject/nix/: overrides.nix
summoner-cli/test/golden/fullProject/src/: FullProject.hs
summoner-cli/test/golden/fullProject/test/: Spec.hs
summoner-cli/test/golden/smallProject/: CHANGELOG.md  README.md  smallProject.cabal
summoner-cli/test/golden/smallProject/app/: Main.hs
summoner-tui/: CHANGELOG.md  default.nix  summoner-tui.cabal
summoner-tui/app/: Tui.hs
summoner-tui/src/: Prelude.hs
summoner-tui/src/Summoner/: Tui.hs
summoner-tui/src/Summoner/Tui/: Field.hs  Form.hs  GroupBorder.hs  Kit.hs  Validation.hs  Widget.hs
test/: Spec.hs
test/Test/: DecisionSpec.hs  Golden.hs  QuestionSpec.hs  TomlSpec.hs
test/golden/fullProject/: .gitignore  README.md  stack-8.2.2.yaml
test/golden/fullProject/app/: Main.hs
test/golden/fullProject/src/: Prelude.hs
