name:                summoner
version:             0.0.0
description:         Tool for creating completely configured production Haskell projects.
synopsis:            Tool for creating completely configured production Haskell projects.
homepage:            https://github.com/kowainik/summoner
bug-reports:         https://github.com/kowainik/summoner/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Kowainik
maintainer:          xrom.xkov@gmail.com
copyright:           2018 Kowainik
category:            CLI, CLI Tool, Development
build-type:          Simple
extra-doc-files:     README.md
cabal-version:       2.0
tested-with:         GHC == 8.2.2

library
  hs-source-dirs:      src
  exposed-modules:     Summoner
                         Summoner.Ansi
                         Summoner.CLI
                         Summoner.Default
                         Summoner.License
                         Summoner.Process
                         Summoner.Project
                         Summoner.ProjectData
                         Summoner.Question
                         Summoner.Template

  ghc-options:         -Wall
  build-depends:       base
                     , aeson
                     , ansi-terminal
                     , bytestring
                     , directory
                     , filepath
                     , neat-interpolation
                     , optparse-applicative
                     , process
                     , text
                     , time

  default-extensions:  GeneralizedNewtypeDeriving
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards

  default-language:    Haskell2010

executable summon
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , summoner
  default-language:    Haskell2010

test-suite summoner-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test

  main-is:             Spec.hs
  other-modules:       Test.DecisionSpec

  build-tool-depends:  tasty-discover:tasty-discover
  build-depends:       base
                     , hedgehog
                     , tasty
                     , tasty-hedgehog
                     , summoner

  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
