name:                summoner
version:             1.1.0
synopsis:            Tool for creating completely configured production Haskell projects.
description:         Tool for creating completely configured production Haskell projects.
                     See README.md for details.
homepage:            https://github.com/kowainik/summoner
bug-reports:         https://github.com/kowainik/summoner/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Kowainik
maintainer:          xrom.xkov@gmail.com
copyright:           2018 Kowainik
category:            CLI, CLI Tool, Development
build-type:          Simple
stability:           stable
extra-doc-files:     README.md
                   , CHANGELOG.md
cabal-version:       2.0
tested-with:         GHC == 8.2.2
                   , GHC == 8.4.3

source-repository head
  type:     git
  location: git@github.com:kowainik/summoner.git

library
  hs-source-dirs:      src
  exposed-modules:     Summoner
                         Summoner.Ansi
                         Summoner.CLI
                         Summoner.Config
                         Summoner.Default
                         Summoner.License
                         Summoner.Process
                         Summoner.Project
                         Summoner.ProjectData
                         Summoner.Question
                         Summoner.Template
                         Summoner.Text
                         Summoner.Tree
                         Summoner.Validation

  other-modules:       Paths_summoner
  autogen-modules:     Paths_summoner

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
  build-depends:       base >= 4.9 && < 5
                     , aeson
                     , ansi-terminal
                     , bytestring
                     , directory
                     , filepath
                     , generic-deriving
                     , neat-interpolation
                     , optparse-applicative
                     , process
                     , text
                     , time
                     , tomland ^>= 0.3.1
                     , relude ^>= 0.1.1

  default-extensions:  DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       LambdaCase
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards

  default-language:    Haskell2010

executable summon
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
  build-depends:       base
                     , relude ^>= 0.1.1
                     , summoner
  default-language:    Haskell2010

test-suite summoner-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test

  main-is:             Spec.hs
  other-modules:       Test.DecisionSpec
                       Test.TomlSpec

  build-tool-depends:  tasty-discover:tasty-discover
  build-depends:       base
                     , hedgehog
                     , relude ^>= 0.1.1
                     , tasty
                     , tasty-hedgehog
                     , tomland ^>= 0.3.1
                     , summoner
  default-extensions:  NoImplicitPrelude

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
  default-language:    Haskell2010
