cabal-version:       2.0
name:                summoner
version:             1.2.0
synopsis:            Tool for creating completely configured production Haskell projects.
description:         Tool for creating completely configured production Haskell projects.
                     See README.md for details.
homepage:            https://github.com/kowainik/summoner
bug-reports:         https://github.com/kowainik/summoner/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Kowainik
maintainer:          xrom.xkov@gmail.com
copyright:           2018 Kowainik
category:            CLI, CLI Tool, Development
build-type:          Simple
stability:           stable
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.2.2
                   , GHC == 8.4.4
                   , GHC == 8.6.2

source-repository head
  type:     git
  location: git@github.com:kowainik/summoner.git

library
  hs-source-dirs:      src
  exposed-modules:     Summoner
                         Summoner.Ansi
                         Summoner.CLI
                         Summoner.Config
                         Summoner.Decision
                         Summoner.Default
                         Summoner.GhcVer
                         Summoner.License
                         Summoner.Process
                         Summoner.Project
                         Summoner.Question
                         Summoner.Settings
                         Summoner.Source
                         Summoner.Template
                           Summoner.Template.Cabal
                           Summoner.Template.Doc
                           Summoner.Template.GitHub
                           Summoner.Template.Haskell
                           Summoner.Template.Stack
                         Summoner.Text
                         Summoner.Tree

  autogen-modules:     Paths_summoner
  other-modules:       Paths_summoner
                       Prelude

  build-depends:       base-noprelude >= 4.10 && < 4.13
                     , aeson >= 1.2.4.0 && < 1.5
                     , ansi-terminal ^>= 0.8.0.4
                     , bytestring ^>= 0.10.8.2
                     , directory ^>= 1.3.0.2
                     , filepath ^>= 1.4.1.2
                     , generic-deriving ^>= 1.12.2
                     , gitrev ^>= 1.3.1
                     , neat-interpolation ^>= 0.3.2.2
                     , optparse-applicative ^>= 0.14.2.0
                     , process ^>= 1.6.1.0
                     , relude ^>= 0.4.0
                     , text ^>= 1.2.3.0
                     , time ^>= 1.8
                     , tomland ^>= 0.5.0

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths

  default-extensions:  DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications

  default-language:    Haskell2010

executable summon
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >= 4.10 && < 4.13, summoner

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths

  default-language:    Haskell2010

test-suite summoner-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test

  main-is:             Spec.hs
  other-modules:       Test.DecisionSpec
                       Test.TomlSpec
                       Test.QuestionSpec
                       Prelude

  build-tool-depends:  tasty-discover:tasty-discover
  build-depends:       base-noprelude >= 4.10 && < 4.13
                     , hedgehog
                     , relude
                     , tasty
                     , tasty-hunit
                     , tasty-hedgehog
                     , tomland
                     , summoner


  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths

  default-extensions:  RecordWildCards
  default-language:    Haskell2010
