cabal-version:       2.4
name:                summoner
version:             1.4.0.0
synopsis:            Tool for scaffolding fully configured batteries-included production-level Haskell projects.
description:         Tool for scaffolding fully configured batteries-included production-level Haskell projects.
                     See [README.md](https://github.com/kowainik/summoner#-summoner) for details.
homepage:            https://github.com/kowainik/summoner
bug-reports:         https://github.com/kowainik/summoner/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Veronika Romashkina, Dmitrii Kovanikov
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2018-2020 Kowainik
category:            CLI, CLI Tool, Development
build-type:          Simple
stability:           stable
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.2.2
                   , GHC == 8.4.4
                   , GHC == 8.6.5
                   , GHC == 8.8.1
extra-source-files:
    test/golden/fullProject/*.yml
    test/golden/fullProject/*.yaml
    test/golden/fullProject/*.md
    test/golden/fullProject/*.cabal
    test/golden/fullProject/src/*.hs
    test/golden/fullProject/app/*.hs
    test/golden/fullProject/test/*.hs
    test/golden/fullProject/benchmark/*.hs
    test/golden/fullProject/.gitignore
    test/golden/fullProject/.travis.yml
    test/golden/fullProject/.stylish-haskell.yaml
    test/golden/fullProject/stack-8.4.4.yaml
    test/golden/fullProject/stack-8.2.2.yaml
    test/golden/fullProject/stack-8.0.2.yaml
    test/golden/fullProject/LICENSE

    test/golden/smallProject/*.md
    test/golden/smallProject/*.cabal
    test/golden/smallProject/app/*.hs

source-repository head
  type:     git
  location: git@github.com:kowainik/summoner.git

common common-options
  build-depends:       base >= 4.10 && < 4.14
                     , relude ^>= 0.6.0.0

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude
                              , Relude.Extra.Enum
                              , Relude.Extra.Validation
                              , Relude.Unsafe
                              )

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
  if impl(ghc >= 8.8.1)
    ghc-options:       -Wmissing-deriving-strategies
                       -Werror=missing-deriving-strategies

  default-extensions:  DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Summoner
                         Summoner.Ansi
                         Summoner.CLI
                         Summoner.Config
                         Summoner.CustomPrelude
                         Summoner.Decision
                         Summoner.Default
                         Summoner.GhcVer
                         Summoner.License
                         Summoner.Project
                         Summoner.Question
                         Summoner.Settings
                         Summoner.Source
                         Summoner.Template
                           Summoner.Template.Cabal
                           Summoner.Template.Doc
                           Summoner.Template.GitHub
                           Summoner.Template.Haskell
                           Summoner.Template.Mempty
                           Summoner.Template.Script
                           Summoner.Template.Stack
                         Summoner.Text
                         Summoner.Tree

  autogen-modules:     Paths_summoner
  other-modules:       Paths_summoner

  build-depends:       aeson >= 1.2.4.0 && < 1.5
                     , ansi-terminal >= 0.8 && < 0.11
                     , bytestring ^>= 0.10.8.2
                     , containers
                     , directory ^>= 1.3.0.2
                     , filepath ^>= 1.4.1.2
                     , generic-deriving >= 1.12.2 && < 1.14
                     , gitrev ^>= 1.3.1
                     , neat-interpolation ^>= 0.3.2.2
                     , optparse-applicative ^>= 0.15
                     , process ^>= 1.6.1.0
                     , shellmet ^>= 0.0.3.0
                     , text ^>= 1.2.3.0
                     , time >= 1.8 && < 1.10
                     , tomland ^>= 1.2.1.0

executable summon
  import:              common-options
  hs-source-dirs:      app
  main-is:             Cli.hs
  build-depends:       summoner

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite summoner-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test

  main-is:             Spec.hs
  other-modules:       Test.CustomPrelude
                       Test.DecisionSpec
                       Test.Golden
                       Test.Script
                       Test.Show
                       Test.TomlSpec
                       Test.QuestionSpec

  build-depends:       directory
                     , filepath
                     , hedgehog >= 0.5.3 && < 1.1
                     , hspec >= 2.4.8
                     , neat-interpolation
                     , text
                     , tomland
                     , tree-diff >= 0.0.2 && < 0.2
                     , summoner

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
