cabal-version:       3.4
name:                summoner
version:             2.2.0.0
synopsis:            Tool for scaffolding fully configured batteries-included production-level Haskell projects.
description:         Tool for scaffolding fully configured batteries-included production-level Haskell projects.
                     See [README.md](https://github.com/kowainik/summoner#-summoner) for details.
homepage:            https://github.com/kowainik/summoner
bug-reports:         https://github.com/kowainik/summoner/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Veronika Romashkina, Dmitrii Kovanikov
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2018-2026 Kowainik
category:            CLI, CLI Tool, Development
build-type:          Simple
stability:           stable
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.4.4
                     GHC == 8.6.5
                     GHC == 8.8.4
                     GHC == 8.10.7
                     GHC == 9.0.2
                     GHC == 9.2.8
                     GHC == 9.4.7
                     GHC == 9.6.7
                     GHC == 9.8.4
                     GHC == 9.10.3
                     GHC == 9.12.2
extra-source-files:
    examples/summoner-default.toml

    examples/cabal-minimal/*.md
    examples/cabal-minimal/*.cabal
    examples/cabal-minimal/app/*.hs

    examples/cabal-full/*.yml
    examples/cabal-full/*.md
    examples/cabal-full/*.cabal
    examples/cabal-full/src/*.hs
    examples/cabal-full/app/*.hs
    examples/cabal-full/test/*.hs
    examples/cabal-full/benchmark/*.hs
    examples/cabal-full/.gitignore
    examples/cabal-full/.github/workflows/ci.yml
    examples/cabal-full/.travis.yml
    examples/cabal-full/LICENSE

    examples/stack-full/*.yml
    examples/stack-full/*.yaml
    examples/stack-full/*.md
    examples/stack-full/*.cabal
    examples/stack-full/src/*.hs
    examples/stack-full/app/*.hs
    examples/stack-full/test/*.hs
    examples/stack-full/benchmark/*.hs
    examples/stack-full/.gitignore
    examples/stack-full/.travis.yml
    examples/stack-full/LICENSE

    examples/full-batteries/*.yml
    examples/full-batteries/*.yaml
    examples/full-batteries/*.md
    examples/full-batteries/*.cabal
    examples/full-batteries/*.txt
    examples/full-batteries/src/*.hs
    examples/full-batteries/app/*.hs
    examples/full-batteries/test/*.hs
    examples/full-batteries/benchmark/*.hs
    examples/full-batteries/.gitignore
    examples/full-batteries/.github/CODEOWNERS
    examples/full-batteries/.github/workflows/ci.yml
    examples/full-batteries/.stylish-haskell.yaml
    examples/full-batteries/.travis.yml
    examples/full-batteries/LICENSE

source-repository head
  type:     git
  location: git@github.com:kowainik/summoner.git

common common-options
  build-depends:       base >= 4.11 && < 4.22
                     , relude >= 1.0.0.0 && < 1.3

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
                     , relude

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -Werror=missing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=../.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:       -Winvalid-haddock
  if impl(ghc >= 9.2)
    ghc-options:       -Wredundant-bang-patterns
                       -Woperator-whitespace
  if impl(ghc >= 9.4  && < 9.10)
    ghc-options:       -Wforall-identifier
  if impl(ghc >= 9.4)
    ghc-options:       -Wredundant-strictness-flags
  if impl(ghc >= 9.8)
    ghc-options:       -Wterm-variable-capture
                       -Winconsistent-flags
  if impl(ghc >= 9.10)
    ghc-options:       -Wincomplete-record-selectors
                       -Wdeprecated-type-abstractions
                       -Wdata-kinds-tc
                       -Wdefaulted-exception-context
  if impl(ghc >= 9.12)
    ghc-options:       -Wview-pattern-signatures

  default-extensions:  DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications

  default-language:    Haskell2010

common exe-options
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Summoner
                         Summoner.CLI
                         Summoner.Config
                         Summoner.CustomPrelude
                         Summoner.Decision
                         Summoner.Default
                         Summoner.GhcVer
                         Summoner.Golden
                         Summoner.License
                         Summoner.Mode
                         Summoner.Project
                         Summoner.Question
                         Summoner.Settings
                         Summoner.Source
                         Summoner.Template
                           Summoner.Template.Cabal
                           Summoner.Template.Doc
                           Summoner.Template.GitHub
                           Summoner.Template.Haskell
                           Summoner.Template.Script
                           Summoner.Template.Stack
                         Summoner.Text
                         Summoner.Tree

  autogen-modules:     Paths_summoner
  other-modules:       Paths_summoner

  build-depends:       colourista ^>= 0.1.0.1
                     , directory ^>= 1.3.0.2
                     , filepath >= 1.4.1.2 && < 1.6
                     , generic-data >= 0.8.0.0 && < 1.2
                     , gitrev ^>= 1.3.1
                     , microaeson ^>= 0.1.0.0
                     , optparse-applicative >= 0.16 && < 0.20
                     , process ^>= 1.6.1.0
                     , shellmet >= 0.0.3.0 && < 0.0.7
                     , time >= 1.8 && < 1.16
                     , tomland ^>= 1.3.0.0
                     , validation-selective >= 0.1.0.0 && < 0.3

executable summon
  import:              common-options, exe-options
  hs-source-dirs:      app
  main-is:             Cli.hs
  build-depends:       summoner

executable gg
  import:              common-options, exe-options
  hs-source-dirs:      golden
  main-is:             Main.hs
  build-depends:       summoner


test-suite summoner-test
  import:              common-options, exe-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test

  main-is:             Spec.hs
  other-modules:       Test.CustomPrelude
                       Test.DecisionSpec
                       Test.Golden
                       Test.Script
                       Test.Show
                       Test.TomlSpec
                       Test.QuestionSpec

  build-depends:       directory
                     , filepath
                     , hedgehog >= 0.5.3 && < 1.8
                     , hspec >= 2.4.8
                     , hspec-hedgehog >= 0.0.1.1 && < 0.4
                     , tomland
                     , tree-diff >= 0.0.2 && < 0.4
                     , summoner
                     , validation-selective
