cabal-version:       2.4
name:                summoner-tui
version:             1.4.0.0
synopsis:            Tool for scaffolding fully configured batteries-included production-level Haskell projects using TUI.
description:         Tool for scaffolding fully configured batteries-included production-level Haskell projects using TUI.
                     See [README.md](https://github.com/kowainik/summoner#-summoner) for details.
homepage:            https://github.com/kowainik/summoner
bug-reports:         https://github.com/kowainik/summoner/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Veronika Romashkina, Dmitrii Kovanikov
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2018-2020 Kowainik
category:            TUI, TUI Tool, Development
build-type:          Simple
stability:           experimental
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.2.2
                   , GHC == 8.4.4
                   , GHC == 8.6.5
                   , GHC == 8.8.1

source-repository head
  type:     git
  location: git@github.com:kowainik/summoner.git

common common-options
  build-depends:       base >= 4.10 && < 4.14
                     , relude ^>= 0.6.0.0

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude
                              , Relude.Extra.Enum
                              , Relude.Extra.Validation
                              )

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
  if impl(ghc >= 8.8.1)
    ghc-options:       -Wmissing-deriving-strategies
                       -Werror=missing-deriving-strategies

  default-extensions:  DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications

  default-language:    Haskell2010

library
  import:              common-options
  if os(windows)
    buildable: False
  hs-source-dirs:      src
  exposed-modules:     Summoner.Tui
                         Summoner.Tui.Field
                         Summoner.Tui.Form
                         Summoner.Tui.GroupBorder
                         Summoner.Tui.Kit
                         Summoner.Tui.Validation
                         Summoner.Tui.Widget

  autogen-modules:     Paths_summoner_tui
  other-modules:       Paths_summoner_tui

  build-depends:       brick >= 0.47 && < 0.51
                     , directory ^>= 1.3.0.2
                     , filepath ^>= 1.4.1.2
                     , microlens ^>= 0.4
                     , microlens-th ^>= 0.4
                     , summoner ^>= 1.4.0
                     , text ^>= 1.2.3.0
                     , vty >= 5.25 && < 5.27

executable summon-tui
  import:              common-options
  if os(windows)
    buildable: False
  hs-source-dirs:      app
  main-is:             Tui.hs
  build-depends:       summoner-tui

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
