cabal-version:       3.0
name:                summoner-tui
version:             2.0.1.1
synopsis:            Tool for scaffolding fully configured batteries-included production-level Haskell projects using TUI.
description:         Tool for scaffolding fully configured batteries-included production-level Haskell projects using TUI.
                     See [README.md](https://github.com/kowainik/summoner#-summoner) for details.
homepage:            https://github.com/kowainik/summoner
bug-reports:         https://github.com/kowainik/summoner/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Veronika Romashkina, Dmitrii Kovanikov
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2018-2022 Kowainik
category:            TUI, TUI Tool, Development
build-type:          Simple
stability:           experimental
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.4.4
                     GHC == 8.6.5
                     GHC == 8.8.4
                     GHC == 8.10.7
                     GHC == 9.0.2

source-repository head
  type:     git
  location: git@github.com:kowainik/summoner.git

common common-options
  build-depends:       base >= 4.11 && < 4.16
                     , relude ^>= 1.0.0.0

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
                     , relude

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -Werror=missing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=../.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-extensions:  DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications

  default-language:    Haskell2010

library
  import:              common-options
  if os(windows)
    buildable: False
  hs-source-dirs:      src
  exposed-modules:     Summoner.Tui
                         Summoner.Tui.Field
                         Summoner.Tui.Form
                         Summoner.Tui.GroupBorder
                         Summoner.Tui.Kit
                         Summoner.Tui.Validation
                         Summoner.Tui.Widget

  autogen-modules:     Paths_summoner_tui
  other-modules:       Paths_summoner_tui

  build-depends:       brick >= 0.56 && < 0.68
                     , colourista ^>= 0.1
                     , directory ^>= 1.3.0.2
                     , microlens ^>= 0.4
                     , microlens-th ^>= 0.4
                     , summoner ^>= 2.0.0.0
                     , validation-selective >= 0.0.0.0 && < 0.2
                     , vty >= 5.25 && < 5.34

executable summon-tui
  import:              common-options
  if os(windows)
    buildable: False
  hs-source-dirs:      app
  main-is:             Tui.hs
  build-depends:       summoner-tui

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
