cabal-version:       3.0
name:                cabal-full
version:             0.0.0.0
synopsis:            Cabal-only example with all integrations
description:
    Cabal-only example with all integrations.
    See [README.md](https://github.com/kowainik/cabal-full#cabal-full) for more details.
homepage:            https://github.com/kowainik/cabal-full
bug-reports:         https://github.com/kowainik/cabal-full/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Kowainik
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2022 Kowainik
category:            Testing
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.4.4
                     GHC == 8.6.5
                     GHC == 8.8.4
                     GHC == 8.10.7
                     GHC == 9.0.2
                     GHC == 9.2.8
                     GHC == 9.4.8
                     GHC == 9.6.6

source-repository head
  type:                git
  location:            https://github.com/kowainik/cabal-full.git

common common-options
  build-depends:       base >= 4.11.1.0 && < 4.19
                     , relude

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       TypeApplications

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     CabalFull

executable cabal-full
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       cabal-full
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite cabal-full-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       cabal-full
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark cabal-full-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       cabal-full
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
